claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/Equipamento__c.object-meta.xml
<CustomObject>
    <label>Equipamento</label>
    <pluralLabel>Equipamentos</pluralLabel>
    <description>Equipamento instalado no cliente, sujeito a manutenção.</description>
    <nameField>
        <label>Código</label>
        <type>AutoNumber</type>
        <displayFormat>EQP-{0000}</displayFormat>
    </nameField>
    <!-- OWD ReadWrite: quem enxerga o objeto pode editar qualquer registro.
         Numa org real, o mais comum e' Private + sharing rules. Ver 13-seguranca. -->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>