claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Cliente</label>
    <description>Conta onde o equipamento está instalado.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Equipamentos</relationshipName>
    <relationshipLabel>Equipamentos</relationshipLabel>
    <!-- Lookup (nao master-detail) de proposito: uma Account grande teria dezenas de
         milhares de filhos, e master-detail ai geraria account data skew.
         Ver 12-modelo-de-dados.md secao 7. -->
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>