claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/fields/Criticidade__c.field-meta.xml
<CustomField>
    <fullName>Criticidade__c</fullName>
    <label>Criticidade</label>
    <description>Impacto de uma parada deste equipamento na operação do cliente.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
                <default>true</default>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <label>Média</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>