claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/fields/OS_Abertas__c.field-meta.xml
<CustomField>
    <fullName>OS_Abertas__c</fullName>
    <label>OS Abertas</label>
    <description>Rollup nativo: só é possível porque Ordem_Servico__c é master-detail deste objeto.</description>
    <type>Summary</type>
    <summaryForeignKey>Ordem_Servico__c.Equipamento__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <summaryFilterItems>
        <field>Ordem_Servico__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Concluida,Cancelada</value>
    </summaryFilterItems>
</CustomField>