claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Estado operacional. Mantido automaticamente pelo OrdemServicoTriggerHandler.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <!-- restricted: a API nao consegue gravar valor fora da lista.
             Sem isto, toda integracao acaba inserindo lixo na picklist. -->
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operacional</fullName>
                <default>true</default>
                <label>Operacional</label>
            </value>
            <value>
                <fullName>Em manutencao</fullName>
                <label>Em manutenção</label>
            </value>
            <value>
                <fullName>Fora de operacao</fullName>
                <label>Fora de operação</label>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>