claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/fields/Ultima_Manutencao__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Manutencao__c</fullName>
    <label>Última Manutenção</label>
    <description>Preenchido automaticamente ao concluir a última OS aberta.</description>
    <type>Date</type>
</CustomField>