claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Equipamento__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <label>Todos os equipamentos</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Numero_Serie__c</columns>
    <columns>Status__c</columns>
    <columns>Criticidade__c</columns>
    <columns>OS_Abertas__c</columns>
    <columns>Conta__c</columns>
    <columns>Ultima_Manutencao__c</columns>
</ListView>